# TestCodeCov

./: CMakeLists.txt  Makefile  Test-cov.cpp  config.h  equation.cpp  equationTest.cpp  main.cpp  movingTest.cpp  object.h  queue.cpp  server.cpp  state_test.cpp  test_IoC.cpp  test_adapter.cpp  test_exception.cpp  test_macrocommand.cpp
.github/workflows/: release.yml  test.yaml
command/: IMovable.h  IRotable.h
homework1/: equationTest.cpp  main.cpp
homework1/include/: config.h
homework11/: Makefile
homework11/include/: eventloop.cpp  object.h
homework12/: CMakeLists.txt  Makefile  main.cpp
homework12/.github/workflows/: release.yaml
homework12/src/com/: icommand.cpp  icommand.h  imoving.h
homework12/src/sec/: object.cpp  object.h  producer.cpp
homework12/src/spe/: eventloop.cpp  ioc.h
homework2/: Makefile
homework2/.github/workflows/: release.yml
homework2/include/: MoveCommand.h  RotateCommand.h  execute.h
homework4/include/: CommandFuelBurn.cpp  CommandFuelBurn.h  CommandFuelCheck.cpp  CommandMove.cpp  CommandRotate.cpp  IMoving.h  object.h
homework5/: CMakeLists.txt
homework5/include/: minor.h  object.h
homework6/: Makefile  test_adapter.cpp
homework6/include/: adapter.h  icommand.cpp  imoving.cpp  imoving.h  irotateble.cpp  irotateble.h  object.h
homework7/: Makefile  queue_test.cpp
homework7/include/: Makefile  eventloop.h  icommand.cpp  icommand.h
homework8/: CMakeLists.txt  client.cpp  server.cpp
homework8/.github/workflows/: release.yaml
homework8/include/: eventloop.cpp  eventloop.h  exceptionhandler.cpp  icommand.cpp  ioc.h  minor.h  producer.cpp  safequeue.h
include/: CommandFuelCheck.h  CommandMove.cpp  CommandMove.h  CommandRotate.h  CommandSimpleMacro.cpp  CommandSimpleMacro.h  EventManager.cpp  IRotatable.h  Makefile  config.h  eventloop.cpp  eventloop.h  icommand.cpp  icommand.h  imessage.h  imoving.h  ioc.h  irotateble.h  istate.h  minor.h  object.cpp  producer.h  safequeue.h
src/com/: commandqueue.cpp  commandqueue.h  icommand.cpp  icommand.h  movecommand.cpp
src/sec/: objposition.h  producer.cpp  producer.h
src/spe/: eventloop.h  exceptionhandler.cpp  exceptionhandler.h  istate.cpp  istate.h
